k8s/gitlab/stopgap-ingresses.yaml
# NOTE(opadron): These extra ingresses handle traffic to the
#                <service>.gitlab.next.spack.io URIs.  They are set up to mirror
#                those created by the gitlab helm chart.
#
#                Once the DNS migration is complete, these stopgap ingresses can
#                be removed.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-minio-stopgap
  namespace: gitlab
spec:
  tls:
  - secretName: tls-gitlab-minio
  rules:
  - host: minio.gitlab.next.spack.io
    http:
      paths:
      - backend:
          serviceName: gitlab-minio-svc
          servicePort: 9000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry-stopgap
  namespace: gitlab
spec:
  tls:
  - secretName: tls-gitlab-registry
  rules:
  - host: registry.gitlab.next.spack.io
    http:
      paths:
      - backend:
          serviceName: gitlab-registry
          servicePort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-webservice-stopgap
  namespace: gitlab
spec:
  tls:
  - secretName: tls-gitlab-webservice
  rules:
  - host: gitlab.next.spack.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-webservice-default
          servicePort: 8181
      - path: /admin/sidekiq
        backend:
          serviceName: gitlab-webservice-default
          servicePort: 8080
